--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
     <artifactId>aipos_pop3_server</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+
    <dependencies>
            <dependency>
                 <groupId>mysql</groupId>
@@ -41,6 +42,11 @@
          <version>1.3</version>
          <scope>test</scope>
       </dependency>
+      <dependency>
+        <groupId>log4j</groupId>
+        <artifactId>log4j</artifactId>
+        <version>1.2.12</version>
+      </dependency>
    </dependencies>
     <build>
         <plugins>
@@ -65,7 +71,6 @@
                     </archive>
                 </configuration>
             </plugin>
-            
         </plugins>
     </build>
 </project>
