--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
         <artifactId>log4j</artifactId>
         <version>1.2.12</version>
       </dependency>
+      <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4</version>
+        </dependency>
    </dependencies>
     <build>
         <testSourceDirectory>src/test</testSourceDirectory>
